Implement nav bar

--- a/frontend/src/css/custom.css
+++ b/frontend/src/css/custom.css
@@ -28,3 +28,12 @@
   text-align: center;
   margin: 20px auto;
 }
+
+.navLink { 
+  text-decoration: none; 
+  color: white;
+}
+
+.navLink::after {
+  color: white;
+}
